// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bot avatar renders agent avatar 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="name fadeIn"
    >
      <span>
        Answer Bot
      </span>
        ·  
      <span>
        Bot
      </span>
    </div>
    <div
      class="container"
    >
      <div
        class="transitionWrapper"
        role="presentation"
        style="opacity: 1; bottom: 0px;"
      >
        <div
          class="wrapper"
        >
          <div
            class="message botMessage"
          >
            <div>
              <div
                class="messageBubble messageBubble botBackground"
              >
                <span
                  class="Linkify"
                >
                  hello
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <img
      alt=""
      aria-hidden="true"
      class="avatar avatar fadeIn"
      src="http://url"
    />
  </div>
</div>
`;

exports[`bot avatar renders brand logo 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="name fadeIn"
    >
      <span>
        Answer Bot
      </span>
        ·  
      <span>
        Bot
      </span>
    </div>
    <div
      class="container"
    >
      <div
        class="transitionWrapper"
        role="presentation"
        style="opacity: 1; bottom: 0px;"
      >
        <div
          class="wrapper"
        >
          <div
            class="message botMessage"
          >
            <div>
              <div
                class="messageBubble messageBubble botBackground"
              >
                <span
                  class="Linkify"
                >
                  hello
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <img
      alt=""
      aria-hidden="true"
      class="avatar avatar fadeIn"
      src="http://url"
    />
  </div>
</div>
`;

exports[`bot name renders agent name 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="name fadeIn"
    >
      <span>
        Bond
      </span>
        ·  
      <span>
        Bot
      </span>
    </div>
    <div
      class="container"
    >
      <div
        class="transitionWrapper"
        role="presentation"
        style="opacity: 1; bottom: 0px;"
      >
        <div
          class="wrapper"
        >
          <div
            class="message botMessage"
          >
            <div>
              <div
                class="messageBubble messageBubble botBackground"
              >
                <span
                  class="Linkify"
                >
                  hello
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      class="container avatar fadeIn Icon--answerBot"
      data-testid="Icon--answerBot"
      type="Icon--answerBot"
    >
      widget-icon_answerBot.svg
    </span>
  </div>
</div>
`;

exports[`renders expected classes and components with default props 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="name fadeIn"
    >
      <span>
        Answer Bot
      </span>
        ·  
      <span>
        Bot
      </span>
    </div>
    <div
      class="container"
    >
      <div
        class="transitionWrapper"
        role="presentation"
        style="opacity: 1; bottom: 0px;"
      >
        <div
          class="wrapper"
        >
          <div
            class="message botMessage"
          >
            <div>
              <div
                class="messageBubble messageBubble botBackground"
              >
                <span
                  class="Linkify"
                >
                  hello
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      class="container avatar fadeIn Icon--answerBot"
      data-testid="Icon--answerBot"
      type="Icon--answerBot"
    >
      widget-icon_answerBot.svg
    </span>
  </div>
</div>
`;

exports[`visitor name and avatar renders nothing 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="container"
    >
      <div
        class="transitionWrapper"
        role="presentation"
        style="opacity: 1; bottom: 0px;"
      >
        <div
          class="wrapper"
        >
          <div
            class="message userMessage"
          >
            <div>
              <div
                class="messageBubble messageBubble userBackground"
              >
                <span
                  class="Linkify"
                >
                  hello
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
